# agent-session-graph

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HIGH_LEVEL_API.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
demo-notebook/: agent-as-tools-lexilens-clean2.ipynb  agent-as-tools-lexilens.ipynb  hiking_boots_recommendations.txt
demo-notebook/.ipynb_checkpoints/: agent-as-tools-3-checkpoint.ipynb  agent-as-tools-lexilens-checkpoint.ipynb  agent-as-tools-lexilens-clean2-checkpoint.ipynb  agent-as-tools-lexilens-v2-checkpoint.ipynb  agent-as-tools-lexilens-v3-checkpoint.ipynb
demo-notebook/raw_traces/strands_manual/: strands_runtime.jsonl
examples/: 00_high_level_api.py  01_basic_usage.py  README.md  test_all_traces.py
examples/data/: README.md  context_loss.json  healthy_session.json  recursive_loop.json  token_explosion.json
examples/fixtures/: __init__.py  healthy_session.py
examples/strands-multi-agent-observability/: .gitignore  README.md  agent-as-tools-lexilens-clean.ipynb  agent-as-tools-lexilens.ipynb  hiking_boots_response.txt  requirements.txt
src/agent_session_graph/: __init__.py  instrumentation.py  replay.py  session_reconstructor.py  storage.py
src/agent_session_graph/detection/: __init__.py  anomaly.py  context_diff.py
src/agent_session_graph/graph/: __init__.py  builder.py
src/agent_session_graph/ingestion/: __init__.py  normalizer.py
src/agent_session_graph/schemas/: __init__.py  context_version.py  execution_edge.py  finding.py  memory_version.py  session_event.py  session_metadata.py
src/agent_session_graph/session/: __init__.py  builder.py
tests/: conftest.py  test_advanced_features.py  test_comprehensive_integration.py  test_context_tracking.py  test_detection_integration.py  test_edge_cases.py  test_examples.py  test_integration.py  test_schemas.py  test_session_builder.py  test_session_reconstructor.py  test_storage.py
