[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-session-graph"
version = "0.1.0"
description = "Session reconstruction and causal graph engine for multi-agent AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Rajeev Bakshi", email = "rajeev.bakshi@curvsort.com"}
]
keywords = [
    "agents",
    "multi-agent",
    "telemetry",
    "opentelemetry",
    "session",
    "graph",
    "observability",
    "tracing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
instrumentation = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/curvsort/agent-session-graph"
Documentation = "https://github.com/curvsort/agent-session-graph#readme"
Repository = "https://github.com/curvsort/agent-session-graph"
"Bug Tracker" = "https://github.com/curvsort/agent-session-graph/issues"
"LexiLensAI" = "https://www.curvsort.com/lexilensai"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_session_graph"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "examples/",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
